--- a/views/layout/app.edge
+++ b/views/layout/app.edge
@@ -767,7 +767,7 @@
              Check <a href="https://privacyterms.io/view/2iVKpB7A-GM6p5fDY-bCE91e/" target="__blank">Disclaimer </a> 
              
             </div>
-            <button type="button" onclick="signUpForm()" class="updatebtn btn btn-outline-primary btn-block mt-2">Sign Up</button>
+            <button type="button" onclick="signUpForm()" class="updatebtn btn btn-outline-primary btn-lg btn-block mt-2">Sign Up</button>
             
             <h5 id="note" class=" mt-2 mb-2 pt-2 pb-2 bg-warning mb-3 text-center">   </h5>
 
@@ -839,7 +839,7 @@
                   </a>
                 </div>
                 <div class="col-md-12">
-                  <button type="button" onclick="signInForm()"  class="updatebtn btn btn-outline-success">Sign In</button>
+                  <button type="button" onclick="signInForm()"  class="updatebtn btn btn-outline-success btn-lg btn-block">Sign In</button>
                 </div>
                 <div class="col-md-12 mt-2">
                   <a href="/FPUser">
