--- a/views/invitationCreate.edge
+++ b/views/invitationCreate.edge
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 
 <link href="https://unpkg.com/intro.js/minified/introjs.min.css" rel="stylesheet"> 
-<link href="https://unpkg.com/intro.js/themes/introjs-modern.css" rel="stylesheet"> 
+{{--  <link href="https://unpkg.com/intro.js/themes/introjs-modern.css" rel="stylesheet">   --}}
 <script src="https://unpkg.com/intro.js/minified/intro.min.js"></script>
 
 
