--- a/views/invitationCustom2.edge
+++ b/views/invitationCustom2.edge
@@ -134,11 +134,11 @@ img{
    
     <div class="col-md-6 offset-md-3 pb-5">
         <div class="row">
-            <div class="col-md-12 d-flex justify-content-center mb-5">
-                             <a class="socialbtn h1 d-flex  m-2" href="whatsapp://send?text=The%20generated%20link%20is%20digital%20invitation%20carddevelop%20by%20MeelIndia%20https://meelindia.com/invitationCustom?id={{dt._id}}"><i class="fa fa-whatsapp" aria-hidden="true"></i></a> 
-                             <a class="socialbtn h1 d-flex  m-2" href="https://www.facebook.com/sharer/sharer.php?u=https://meelindia.com/invitationCustom?id={{dt._id}}"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>   
-                            <a class="socialbtn d-flex row" href="https://www.instagram.com/sharer.php?u=https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-instagram" aria-hidden="true"></i></a> 
-                             <a class="socialbtn h1 d-flex  m-2" onclick='myFunction("{{ dt._id }}");'> <i class="fa fa-copy" aria-hidden="true"></i></a>  
+            <div class="col-md-12 d-flex justify-content-center mb-1 mt-5">
+                             <a class="socialbtn h1 d-flex  mr-4" href="whatsapp://send?text=The%20generated%20link%20is%20digital%20invitation%20carddevelop%20by%20MeelIndia%20https://meelindia.com/invitationCustom?id={{dt._id}}"><i class="fa fa-whatsapp" aria-hidden="true"></i></a> 
+                             <a class="socialbtn h1 d-flex  mr-3" href="https://www.facebook.com/sharer/sharer.php?u=https://meelindia.com/invitationCustom?id={{dt._id}}"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>   
+                             <a class="socialbtn h1 d-flex  ml-3" href="https://www.instagram.com/sharer.php?u=https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-instagram" aria-hidden="true"></i></a> 
+                             <a class="socialbtn h1 d-flex  ml-4" onclick='myFunction("{{ dt._id }}");'> <i class="fa fa-copy" aria-hidden="true"></i></a>  
             </div>
             @each(dt in invitations)
             <div class="col-md-12 mt-5">
