--- a/views/invitation2.edge
+++ b/views/invitation2.edge
@@ -183,7 +183,7 @@ font-family:'play';
 
                     <a class="socialbtn h1 d-flex  mr-4" href="whatsapp://send?text=The%20generated%20link%20is%20digital%20invitation%20carddevelop%20by%20MeelIndia%20https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-whatsapp" aria-hidden="true"></i></a> 
                     <a class="socialbtn h1 d-flex  mr-3" href="https://www.facebook.com/sharer/sharer.php?u=https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-facebook-official" aria-hidden="true"></i></a> 
-                    <a class="socialbtn h1 d-flex  ml-3" href="https://www.instagram.com/sharer.php?u=https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-instagram" aria-hidden="true"></i></a> 
+                    {{--  <a class="socialbtn h1 d-flex  ml-3" href="https://www.instagram.com/sharer.php?u=https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-instagram" aria-hidden="true"></i></a>   --}}
                     <a class="socialbtn h1 d-flex  ml-4" onclick='myFunction("{{ dt._id }}");'> <i class="fa fa-copy" aria-hidden="true"></i></a>
                 </div>
 
