admin Panel added

--- a/viewsAdmin/invitations.edge
+++ b/viewsAdmin/invitations.edge
@@ -94,7 +94,7 @@
                                 <hr>
                                         <h5>Title : {{ dt.title}}  </h5>
                                         <p>Type :  {{dt.type }}  </p>
-                                        <input type="button" class="btn btn-sm btn-outline-primary" value="open" onclick="window.open('https://meelindia.com/invitation??id={{ dt._id }}','__blank') "> 
+                                        <input type="button" class="btn btn-sm btn-outline-primary" value="open" onclick="window.open('https://meelindia.com/invitation?id={{ dt._id }}','__blank') "> 
         
                                 @endeach
 
@@ -110,7 +110,7 @@
                                 <hr>
                                         <h5>Title : {{ dt.title}}  </h5>
                                         <p>Type :  {{dt.type }}  </p>
-                                        <input type="button" class="btn btn-sm btn-outline-primary" value="open" onclick="window.open('https://meelindia.com/invitation??id={{ dt._id }}','__blank') "> 
+                                        <input type="button" class="btn btn-sm btn-outline-primary" value="open" onclick="window.open('https://meelindia.com/invitation?id={{ dt._id }}','__blank') "> 
         
                                 @endeach
 
@@ -126,7 +126,7 @@
                                 <hr>
                                         <h5>Title : {{ dt.title}}  </h5>
                                         <p>Type :  {{dt.type }}  </p>
-                                        <input type="button" class="btn btn-sm btn-outline-primary" value="open" onclick="window.open('https://meelindia.com/invitation??id={{ dt._id }}','__blank') "> 
+                                        <input type="button" class="btn btn-sm btn-outline-primary" value="open" onclick="window.open('https://meelindia.com/invitation?id={{ dt._id }}','__blank') "> 
         
                                 @endeach
 
@@ -142,7 +142,7 @@
                                 <hr>
                                         <h5>Title : {{ dt.title}}  </h5>
                                         <p>Type :  {{dt.type }}  </p>
-                                        <input type="button" class="btn btn-sm btn-outline-primary" value="open" onclick="window.open('https://meelindia.com/invitation??id={{ dt._id }}','__blank') "> 
+                                        <input type="button" class="btn btn-sm btn-outline-primary" value="open" onclick="window.open('https://meelindia.com/invitation?id={{ dt._id }}','__blank') "> 
         
                                 @endeach
 
