--- a/viewsAdmin/layout/app.edge
+++ b/viewsAdmin/layout/app.edge
@@ -76,6 +76,18 @@
                   <span>Home</span>
                 </a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link collapsed" href="/blogs" aria-expanded="true" aria-controls="collapseTwo">
+                  <i class="fas fa-fw fa-pen"></i>
+                  <span>Blogs</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link collapsed" href="/blogCreate" aria-expanded="true" aria-controls="collapseTwo">
+                  <i class="fas fa-fw fa-tasks"></i>
+                  <span>Add Blog Post</span>
+                </a>
+              </li>
            
 
     </ul>
