custom req. remove

--- a/views/invitationCreateCustom.edge
+++ b/views/invitationCreateCustom.edge
@@ -162,8 +162,8 @@
                 <label for="exampleInputEmail1">Location :
                     Select the destination on map or you can upload lattitude and longitude here.
                 </label>
-                <input type="text" class="form-control mt-2" id="lat2" name="lat" placeholder="Enter lattitude" required>
-                <input type="text" class="form-control mt-2" id="lng2" name="lng" placeholder="Enter longitude" required>
+                <input type="text" class="form-control mt-2" id="lat2" name="lat" placeholder="Enter lattitude" >
+                <input type="text" class="form-control mt-2" id="lng2" name="lng" placeholder="Enter longitude" >
             </div>
             
             <h5> Select Location on Map OR paste the Google Map link.</h5>
