--- a/views/invitationCustom2.edge
+++ b/views/invitationCustom2.edge
@@ -147,11 +147,17 @@ img{
                 </div>
                 <div class="col-md-8 offset-md-2 mb-2 text-center">
                     <div class="d-flex justify-content-center">
-                    @if(dt.loc)
-                        <input type="button" class="col-12  pt-2 pb-2 mt-2 mb-2 btn btn-success m-2" value="Locate to destination"  onclick="window.location='{{dt.loc}}' ">
-                    @else
-                        <input type="button" class="col-12  pt-2 pb-2 mt-2 mb-2 btn btn-success m-2" value="Locate to destination"  onclick="window.location='https://www.google.com/maps/search/?api=1&query={{dt.lat}},{{dt.lng}}' ">
-                    @endif
+                   
+                        @if(dt.loc)
+
+                            <input type="button" class="col-12  pt-2 pb-2 mt-2 mb-2 btn btn-success m-2" value="Locate to destination" data-title="Venue" data-intro="Click here to open venue or location of celebration in Google map." onclick="window.location='{{dt.loc}}' ">
+    
+                        @else
+
+                            <input type="button" class="col-12  pt-2 pb-2 mt-2 mb-2 btn btn-success m-2" value="Locate to destination" data-title="Venue" data-intro="Click here to open venue or location of celebration in Google map." onclick="window.location='https://www.google.com/maps/search/?api=1&query={{dt.lat}},{{dt.lng}}' ">
+
+                        @endif
+                        
                         <a class="socialbtn h1 d-flex  m-2" href="{{dt.image}}" download> <i class="fa fa-download" aria-hidden="true"></i></a>
                     </div>
             </div> 
