session expire fix

--- a/views/greetingCreate.edge
+++ b/views/greetingCreate.edge
@@ -277,7 +277,7 @@ crossorigin=""></script>
                                 alert("Your greeting created successfully");
                                 strText = this.responseText;
                                 strText = strText.slice(1,-1);
-                                window.location ="greeting?id="+strText;
+                                window.location ="greeting2?id="+strText;
                             }
                             
                         }
