--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,20 +2,23 @@
 * {
   box-sizing: border-box;
 }
+
 body {
   padding-top: 0px;
   padding-bottom: 0px;
 }
+
 .hi-slide {
   position: relative;
   margin: 50px auto 0;
   margin-bottom: 180px;
+  width: 100%;
 }
 
 .hi-slide > ul {
   list-style: none;
   position: relative;
-  height: 20vh;
+  min-height: 20vh;
   margin: 0;
   padding: 0;
 }
@@ -207,8 +210,8 @@ header .container .col-md-7 p {
   width: 15rem;
   margin: 3vmin 3vmin;
   padding-bottom: 60px;
-  background:url('../icons/frame.png'); 
-  background-size:100% 100%;
+  background: url("../icons/frame.png");
+  background-size: 100% 100%;
 }
 
 .cards div {
@@ -221,7 +224,6 @@ header .container .col-md-7 p {
   padding: 2em 2.5em;
   font-size: 1.8vmin;
   font-weight: 150px;
-
 }
 .cards .card-text {
   padding: 2em 2.5em;
@@ -246,12 +248,7 @@ header .container .col-md-7 p {
     yellow 0%,
     yellow 100%
   );
-  background: linear-gradient(
-    to right,
-    #f76f61 0%,
-    #fd5195 50%
-    
-  );
+  background: linear-gradient(to right, #f76f61 0%, #fd5195 50%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3f3f3', endColorstr='#f7f7f7',GradientType=1 );
 }
 
@@ -300,7 +297,6 @@ header .container .col-md-7 p {
 @media screen and (max-width: 980px) {
   #two {
     padding: 4em 0 2em 0;
-    
   }
 
   #two .inner {
