--- a/views/index.edge
+++ b/views/index.edge
@@ -109,19 +109,21 @@ crossorigin="anonymous">
     
   </div>
 </section>
+<div class="container-fluid hi-slide-head">
 
-<div class="slide hi-slide col-md-6 offset-md-3 pb-5" >
-  <h1 class="text-center mb-5">We have a wide variety of Cards for you to explore!</h1>
-  <ul class="col-md-12">
-    <li><img src="./example/engangement.png" alt="Img 1" /></li>
-    <li><img src="./example/anniversary.png" alt="Img 2" /></li>
-    <li><img src="./example/innogration.png" alt="Img 3" /></li>
-    <li><img src="./example/birthday.png" alt="Img 4" /></li>
-    <li><img src="./example/wedding.png" alt="Img 5" /></li>
-    <li><img src="./example/birthday.png" alt="Img 6" /></li>
-    <li><img src="./example/anniversary.png" alt="Img 7" /></li>
-    <li><img src="./example/engangement.png" alt="Img 7" /></li>
-  </ul>
+  <div class="slide hi-slide col-md-5 offset-md-3 pb-5" >
+      <h1 class="text-center mb-5">We have a wide variety of Cards for you to explore!</h1>
+      <ul class="col-md-12 col-12">
+        <li><img src="./example/engangement.png" alt="Img 1" /></li>
+        <li><img src="./example/anniversary.png" alt="Img 2" /></li>
+        <li><img src="./example/innogration.png" alt="Img 3" /></li>
+        <li><img src="./example/birthday.png" alt="Img 4" /></li>
+        <li><img src="./example/wedding.png" alt="Img 5" /></li>
+        <li><img src="./example/birthday.png" alt="Img 6" /></li>
+        <li><img src="./example/anniversary.png" alt="Img 7" /></li>
+        <li><img src="./example/engangement.png" alt="Img 7" /></li>
+      </ul>
+  </div>
 </div>
   
 		
