--- a/views/invitation2.edge
+++ b/views/invitation2.edge
@@ -199,7 +199,7 @@ font-family:'play';
                 </div> 
                 <div class="col-md-8 offset-md-2 mb-2 text-center">
                     
-                    <div class="d-flex justify-content-center">
+                    <div class="d-flex justify-content-center flex-row">
 
                         @if(dt.loc)
 
